# modular_genai

./: .gitignore  Framework.md  README.md  build_composable_pipeline.sh  build_genai.sh  build_mx.sh  build_mx_genai.sh  cp_samples_cpp.sh  cp_unit_test.sh  mx_samples.sh  mx_samples_itt.sh  mx_unit.sh  run_benchmark.sh  run_modeling_hf_model.sh  run_modeling_sample.sh  run_mx_modeling_greedy_lm.sh  run_mx_modeling_samples.sh  run_mx_pythontests.sh  run_samples_cpp.sh  run_samples_python.sh  source_mx_ov.sh  source_ov.sh
example_ov_cpp/: .gitignore  CMakeLists.txt  config.yaml  config_test.yaml  load_image.hpp  main.cpp  my_build.sh  my_run.sh  my_utils.cpp  my_utils.hpp  test_call_ov.cpp  test_module_genai.cpp  test_vlm_genai.cpp  utils_test_model.cpp  utils_test_model.hpp
models/: download_model.sh
models/Qwen2.5-VL-3B-Instruct/INT4/: config.yaml  config_test.yaml
nncf_compression/: README.md  compress.py  compress.sh  requirements.txt
release/releae_gemma4/: .gitignore  README.md  run.sh
release/releae_gemma4/Gemma4/: config_modeling_text_img_audio_cb.yaml  config_modeling_text_img_audio_cb_st.yaml
release/releae_gemma4/example/: CMakeLists.txt  build.sh  run_example.sh  simple_pipeline.cpp
release/release_qwen3_omni/: .gitignore  case1_comprehensive.json  config_chat_cb.yaml  run.sh
release/release_qwen3_omni/release_docker/: .dockerignore  Dockerfile  INDEX.md  README.Docker.md  README.md  SETUP_SUMMARY.md  VOLUME_MOUNT.md  (+3 more)
tests/zimage/: README.md  run_test_z_image_pipeline.sh  tensor_utils.py  test_z_image_pipeline.py
tools/: README.md  cvt_tokenizer_to_ir.py  reduce_split_num.py  test_transformer_splitted.py
zimage_test/: .gitignore  README.md  download_model.sh
zimage_test/optimum_ov/: .gitignore  README.md  cmd_helper.py  gradio_helper.py  notebook_utils.py  z_img.py
